feat(project): 移除多个模块中的废弃代码文件
- 删除 mvc 模块中的 .gitignore 配置文件
- 移除 concurrent 模块中多个并发测试相关类文件
- 清理 proxy 模块中代理模式相关的 Java 类文件
- 删除 leetcode 模块中多个算法题解的 Java 类文件
- 移除 mvc 模块中控制器、配置和测试相关的 Java 类文件