@@ -8,13 +8,13 @@ public class Stack {
     public void param(Integer a) {
 
         System.out.println(a);
-        a = new Integer(33);
+        a = Integer.valueOf(33);
         System.out.println(a);
     }
 
 
     public void test() {
-        Integer a = new Integer(2);
+        Integer a = Integer.valueOf(2);
         param(a);
         System.out.println("aaaa : " + a);
 
